estrutura macro ok

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -1,1 +1,23 @@
-<p>search-page works!</p>
+<header>
+    <div>
+        <img src="http://aai-frontend-interview-mock-data.s3-website-sa-east-1.amazonaws.com/assets/favicon.png">
+    </div>
+    <div>
+        <p>Teste de Desenvolvedor Front-end / Anota AI</p>
+        <p>Gabriela Brancalhão</p>
+    </div>
+</header>
+<body>
+    <div>
+        <input type="search" id="search" name="search">
+        <input type="submit" value="Submit">
+    </div>
+    <div class="lista">
+        <div class="card borda"></div>
+        <div class="borda"></div>
+        <div class="borda"></div>
+        <div class="borda"></div>
+        <div class="borda"></div>
+        <div class="borda"></div>
+    </div>
+</body>
