--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -13,6 +13,8 @@
         <input type="submit" value="Submit">
     </div>
     <div class="lista">
-        <div class="card borda"></div>
+        <div class="card borda">
+            <img class="closeBtn" src="http://aai-frontend-interview-mock-data.s3-website-sa-east-1.amazonaws.com/assets/close.svg">
+        </div>
     </div>
 </body>
