--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -11,6 +11,7 @@
     <div>
         <input type="search" id="search" name="search">
         <input type="submit" value="Submit">
+        <button (click)="listarTodosProdutos()">GET</button>
     </div>
     <div class="lista">
         <div class="card borda">
