--- a/src/app/search-page/search-page.component.css
+++ b/src/app/search-page/search-page.component.css
@@ -1,26 +1,80 @@
-header{
+header {
+    width: 100%;
     display: flex;
     border-bottom: solid 1px lightgrey;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.lista { 
+body { 
+    width: 100%;
+}
+
+.fontSty { 
+    font-size: 14px;
+    color: gray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.lista {
     display: flex;
     justify-content: space-around;
-}
-
-.card { 
-    width: 20%;
-    height: 40%;
 }
 
 .borda {
     border: solid 1px lightgray;
     border-radius: 10px;
+    font-size: 10px;
+    margin: 5%;
+    width: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .closeBtn {
     border: solid 1px lightgray;
-    border-radius: 50px;
+    border-radius: 60px;
     width: 25px;
-    height: auto;
+    height: 25px;
+    margin: 10px;
+}
+
+.title { 
+    font-size: 14px;
+    font-weight: bolder;
+}
+
+.close { 
+    text-align: end;
+} 
+
+.coluna { 
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+
+.paddLeft {
+    padding-left: 10px;
+} 
+
+.prodImg { 
+    object-fit: cover;
+    object-position: center;
+    -o-object-fit: cover;
+    -o-object-position: center;
+    width: 100%;
+    height: 200px;
+}
+
+.descricao {
+    text-align: justify;
+}
+
+.sizeColuna { 
+    width: 80%;
+}
+
+.search {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
