falta excluir e pesquisar

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -10,7 +10,8 @@
 <body>
     <div class="search">
         <div>
-            <input class="inp1" type="search" name="search">
+            <input type="text" name="search" 
+            placeholder="Como posso ajudar?">
         </div>
     </div>
     <div class="lista">
