--- a/src/app/search-page/search-page.component.css
+++ b/src/app/search-page/search-page.component.css
@@ -87,15 +87,21 @@ body {
     margin-bottom: 2%;
 }
 
-.inp1 { 
+
+input[type=text] {
     border-radius: 5px;
     height: 40px;
     width: 60%;
     font: 0.9vw;
     padding-left: 10px;
-}
+    border: solid 1px lightgray;
+    box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+  }
 
-:active.inp1 { 
-     color: blue;
+input[type=text]:focus {
+  border: 1px solid rgb(72, 72, 238);
+  box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
 }
-
