--- a/src/app/search-page/search-page.component.css
+++ b/src/app/search-page/search-page.component.css
@@ -26,6 +26,8 @@ body {
     font-size: 10px;
     margin: 5%;
     width: auto;
+    height: 90%;
+    padding-bottom: 10px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -66,8 +68,7 @@ body {
 .coluna { 
     display: flex;
     flex-direction: column;
-    padding: 8px;
-    height: 300px;
+    padding: 10px;
 }
 
 .padd {
@@ -82,7 +83,7 @@ body {
     -o-object-fit: cover;
     -o-object-position: center;
     width: 100%;
-    height: 180px;
+    height: 140px;
 }
 
 .descricao {
