--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -10,8 +10,9 @@
 <body>
     <div class="search">
         <div>
-            <input type="text" name="search" id="prod"
-            placeholder="Como posso ajudar?" (keypress)="updateFilter()">
+            <input type="text" name="search" id="search"
+            placeholder="Como posso ajudar?" 
+           (keyup)="updateFilter($event)">
         </div>
     </div>
     <div class="lista">
